# robo_collector

./: .gitignore  LICENSE  README.md
camera/: README.md
camera/robo_collector_camera/: client.py
camera/robo_collector_camera.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
camera/scripts/: run_camera_viewer.sh  setup_camera_env.sh
configs/: collection_fields.yml
docs/: collection_fields_config_plan.md  dual_realsense_gr00t_collection_plan.md  lerobot_final_collection_plan.md  robo_state_middleware_plan.md  stepit_ros2_data_interface.md  teleop_data_collection_workflow.md  xrt_retargeting_workflow.md
scripts/: convert_outputs_to_gr00t.py  convert_outputs_to_pi05.py  launch_data_collection.sh  setup_data_collection_env.sh
src/camera/: README.md  pyproject.toml  requirements-client.txt  requirements-realsense.txt
src/camera/docs/: camera_collection_workflow.md
src/camera/robo_collector_camera/: __init__.py  client.py  server_realsense.py  viewer.py
src/camera/scripts/: run_camera_viewer.sh  run_realsense_server.sh  test_camera_client.sh
src/camera/test/: test_camera_client.py
src/robo_collector/: CMakeLists.txt  package.xml
src/robo_collector/robo_collector/: __init__.py  camera_cache.py  collector_node.py  collector_state.py  field_config.py  gr00t_converter.py  lerobot_dataset.py  pi05_converter.py
src/robo_collector/scripts/: lerobot_collector_node
src/robo_collector/test/: test_camera_cache.py  test_collector_state.py  test_field_config.py  test_gr00t_converter.py  test_lerobot_dataset.py  test_pi05_converter.py
src/robo_collector_msgs/: CMakeLists.txt  package.xml
src/robo_collector_msgs/msg/: RecordCommand.msg
src/robo_state/: CMakeLists.txt  package.xml
src/robo_state/robo_state/: __init__.py  robo_state_node.py  state_builder.py
src/robo_state/scripts/: robo_state_node
src/robo_state/test/: test_state_builder.py
src/robo_state_msgs/: CMakeLists.txt  package.xml
src/robo_state_msgs/msg/: PolicyState.msg  RoboStateSample.msg  RobotLowState.msg
