<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robo_collector</name>
  <version>0.1.0</version>
  <description>Final LeRobot episode collector for Robo Collector.</description>
  <maintainer email="kyx@example.com">kyx</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ament_cmake_python</build_depend>

  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>python3-pyarrow</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>robo_collector_msgs</exec_depend>
  <exec_depend>robo_state_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>python3-pytest</test_depend>
  <test_depend>python3-pyarrow</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
